feat: add  document

--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "canary:bumpVersion": "yarn lerna version `yarn --silent canary:version` --exact --no-push --yes",
     "canary:publish": "yarn lerna publish from-package --dist-tag canary --yes --no-verify-access",
     "changelog": "lerna-changelog",
-    "postinstall": "patch-package && yarn lock:update && yarn build:packages",
+    "postinstall": "patch-package && yarn lock:update",
+    "postinstall:full": "patch-package && yarn lock:update && yarn build:packages",
     "prepare": "husky install",
     "format": "prettier --write .",
     "format:diff": "prettier --list-different .",
